k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flappy-bird-service
  namespace: flappy-bird
  labels:
    app: flappy-bird
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: flappy-bird
    tier: frontend
